fix: input types that have icons on dark mode

--- a/src/styles.css
+++ b/src/styles.css
@@ -33,6 +33,10 @@
 	* {
 		@apply font-kds-inter text-neutral-700 outline-0 focus:!ring-2 focus:!ring-dongs-300 dark:text-neutral-100 dark:outline-0 dark:focus:!ring-2 dark:focus:!ring-dongs-700;
 	}
+
+    input {
+        @apply dark:[color-scheme:dark]
+    }
 }
 
 @tailwind components;
